<?xml version="1.0"?>
<package format="2">
  <name>rcljava</name>
  <version>0.0.0</version>
  <description>Package containing the Java client.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <build_depend>rmw_implementation_cmake</build_depend>

  <depend>rmw_implementation</depend>
  <depend>rcl</depend>
  <depend>rosidl_cmake</depend>
  <depend>rosidl_parser</depend>

<!--
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rmw_implementation</depend>
-->

<!--
  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>rosidl_generator_java</test_depend>
  <test_depend>rosidl_typesupport_opensplice_c</test_depend>
-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
