<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcljava</name>
  <version>0.0.0</version>
  <description>Package containing the Java client.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>
  <buildtool_depend>rcljava_common</buildtool_depend>

  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <build_export_depend>rmw</build_export_depend>

  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rosidl_generator_java</build_depend>
  <build_depend>rcljava_common</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rmw_implementation_cmake</exec_depend>
  <exec_depend>rosidl_generator_c</exec_depend>
  <exec_depend>rosidl_generator_java</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rcljava_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>rcl</depend>
  <depend>rmw_implementation</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>builtin_interfaces</test_depend>
  <test_depend>rcljava_common</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>rosidl_default_generators</test_depend>
  <test_depend>rosidl_default_runtime</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
